# skycat

./: .gitignore  CHANGES  README  VERSION  bootstrap  configure  configure.in  doit  tcltags
astrotcl/: CHANGES  Makefile.in  VERSION  aclocal.m4  astrotclConfig.sh.in  configure  configure.in
astrotcl/autom4te.cache/: output.0  traces.0
astrotcl/cfitsio/: VERSION  cfileio.c  drvrnet.c  eval_l.c  fitsio.h
astrotcl/generic/: Astrotcl.C  DCompress.C  DCompress.h  FitsIO.C  Fits_IO.h  HMS.C  HMS.h  ImageCoords.C  ImageCoords.h  ImageIO.C  ImageIO.h  SAOWCS.C  SAOWCS.h  TclWorldCoords.C  TclWorldCoords.h  WCSRep.C  WCSRep.h  WorldCoords.C  WorldCoords.h  WorldOrImageCoords.h  slasubs.h  world_coords.C  world_coords.h
astrotcl/libwcs/: Makefile.in  VERSION  cel.c  distort.c  hget.c  lin.c  proj.c  sph.c  wcs.c  wcscon.c  wcsinit.c  wcslib.c  wcslib.h  wcstrig.c
astrotcl/man/: Compress.man3  FitsIO.man3  HMS.man3  ImageCoords.man3  ImageIO.man3  WCS.man3  WorldCoords.man3  WorldOrImageCoords.man3  world_coords.man3
astrotcl/tests/: Makefile.in  tCompress.C  tFitsIO.C  tHMS.C  (+3 more)
autom4te.cache/: output.0  traces.0
cat/: CHANGES  Makefile.in  VERSION  aclocal.m4  catConfig.sh.in  configure  configure.in
rtd/: CHANGES  Makefile.in  VERSION  aclocal.m4  configure  configure.in  rtd.in  rtdConfig.sh.in  rtdctrl
skycat/: CHANGES  Makefile.in  aclocal.m4  configure  configure.in  skycat-star.in  skycat.in  skycatConfig.sh.in
tclconfig/: tcl.m4
tclutil/: CHANGES  Makefile.in  VERSION  aclocal.m4  configure  configure.in  tclutil.sh.in  tclutilConfig.sh.in
(+317 files in other folders)
