# E.S.O. - VLT project 
# $Id: configure.in,v 1.1.1.1 2009/03/31 14:11:52 cguirao Exp $
#
# This file is used with GNU autoconf to generate a configure script for
# building Skycat.
#
# who             when       what
# --------------  --------   ---------------------------------------------
# Allan Brighton  15/12/05   Rewrote using TCL TEA standard
# -----------------------------------------------------------------------

AC_INIT([skycat], [3.1.4])

AC_CONFIG_AUX_DIR(tclconfig)

AC_ARG_WITH(blt, 
    [AC_HELP_STRING([--with-blt=DIR],[link with BLT library installed in DIR])],
    with_blt=$withval)

AC_ARG_ENABLE(merge, 
    [AC_HELP_STRING([--enable-merge],[merge the contents of compile-time dependent packages into master rtd, cat and skycat libraries])],
    [MERGED=$enableval],
    [MERGED=no])

echo "build merged master libraries for rtd, cat and skycat? $MERGED"

AC_CONFIG_SUBDIRS(tclutil astrotcl rtd cat skycat)

AC_OUTPUT([Makefile])
